# swsel

./: Cargo.toml  LICENSE  README.md
data/: definitions.toml
examples/: snake.rs  write_example.rs  writing_building.rs
src/: block.rs  building.rs  lib.rs  root.rs  structs.rs  utils.rs
src/definitions/: mod.rs
src/io/: mod.rs  types.rs  utils.rs  write.rs
src/io/version/: mod.rs  v0.rs  v6.rs
